# MyPersonalDiscordBot

./: .clang-format  .gitattributes  .gitignore  .python-version  CMakeConfigure.sh  CMakeController.sh  CMakeLists copy.txt  CMakeLists.txt  LICENSE  ProjectRenamer.sh  README-cmake.md  README.md  SolutionController.py  SolutionController.sh  SolutionRenamer.py  SolutionRenamer.sh  SolutionUpgrader.py  TemplateRenamer.sh  aarch64.cmake  build.sh  cmake_configure.sh  compile_test.sh  conanfile.py  conanfile.txt  cross-lib.sh  main.cpp  mydiscordbot.code-workspace  push-artifacts.sh  rebuildaarch64.sh  rebuildx86-64.sh  remote-push.sh  rpi4-toolchain.cmake  test_unistring  test_unistring.c
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
Disabled/: aarch64.cmake.disabled  readme.md
Include/MyDiscordBotLib/: MyDiscordBotLib.hpp
Source/: MyDiscordBot.cpp  MyDiscordBotLib.cpp
Standalone/: CMakeLists.txt  LICENSE
Standalone/Source/: Main.cpp
Utilities/: AboutThisFolder.md
Utilities/CMakeToolChains/: x86_64-unknown-linux-gnu.cmake
Utilities/ConanProfiles/: aarch64-linux-gnu
assets/: kralicky.txt
backup/20250123100050/: SolutionController.py
backup/20250123165606/: SolutionController.py  conanfile.py
cmake/: Dependencies.cmake  libiconv-module.cmake  libiconv.cmake  libssh2-module.cmake  madler-zlib.cmake  mw-openssl.cmake  openssl-cmake-module.cmake  openssl-module.cmake  opus-module.cmake  tools.cmake  xiph-opus.cmake  xiph-opus.cmake.old
cmake/Modules/: FindALSA.cmake  FindCAIRO.cmake  FindGIO.cmake  FindGLIB.cmake  FindGTK3.cmake  FindLIBINPUT.cmake  FindLIBUDEV.cmake  FindPUGIXML.cmake  FindXINPUT.cmake  FindXRANDR.cmake  FindXTEST.cmake
include/: Logger.hpp
include/MyDiscordBot/: MyDiscordBot.hpp
include/MyDiscordBotLib/: BotBroker.hpp
source/: BotBroker.cpp  MyDiscordBot.cpp  greeter.cpp
standalone/: CMakeLists.txt  copybuild.sh  cross-standalone.sh  cross.sh  crossbuild-aarch64.sh  rebuild-amd64.sh
standalone/source/: Main.cpp  main.cpp
